<resources>
    <string name="app_name">ChatKuy</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="login">LOGIN</string>
    <string name="your_email">Your Email</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'am using Chat Kuy</string>
</resources>
